# docs/swagger.yaml
@@ -1,4 +1,19 @@
 definitions:
+  domain.Order:
+    properties:
+      created_at:
+        type: string
+      is_final:
+        type: boolean
+      order_id:
+        type: string
+      status:
+        $ref: '#/definitions/domain.OrderStatus'
+      updated_at:
+        type: string
+      user_id:
+        type: string
+    type: object
   domain.OrderEvent:
     properties:
       created_at:
@@ -67,6 +82,77 @@ definitions:
 info:
   contact: {}
 paths:
+  /orders:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve a list of orders with optional filtering and sorting.
+      parameters:
+      - collectionFormat: csv
+        description: List of order statuses to filter by. Required if `is_final` is
+          not provided.
+        in: query
+        items:
+          type: string
+        name: status
+        type: array
+      - description: ID of the user to filter orders by.
+        in: query
+        name: user_id
+        type: string
+      - description: Number of orders to return. Default is 10.
+        in: query
+        name: limit
+        type: integer
+      - description: Offset for pagination. Default is 0.
+        in: query
+        name: offset
+        type: integer
+      - description: Final status of the order. Required if `status` is not provided.
+        in: query
+        name: is_final
+        type: boolean
+      - description: Field to sort by (created_at/updated_at). Default is created_at.
+        in: query
+        name: sort_by
+        type: string
+      - description: Sort order (asc/desc). Default is desc.
+        in: query
+        name: sort_order
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/domain.Order'
+            type: array
+      summary: Retrieve a list of orders
+      tags:
+      - orders
+  /orders/{order_id}/events:
+    get:
+      consumes:
+      - application/json
+      description: Stream events for an order using Server-Side Events (SSE).
+      parameters:
+      - description: ID of the order
+        in: path
+        name: order_id
+        required: true
+        type: string
+      produces:
+      - text/event-stream
+      responses:
+        "200":
+          description: Stream of order events
+          schema:
+            $ref: '#/definitions/domain.OrderEvent'
+      summary: Stream order events
+      tags:
+      - orders
   /webhooks/payments/orders:
     post:
       consumes:
